--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,6 +53,18 @@ jobs:
           cmake --build build -t doc
           cmake --build build -t package
 
+      - name: List files before
+        run: tree -L 3
+
+      - name: Sign with sigstore
+        uses: sigstore/gh-action-sigstore-python@a5caf349bc536fbef3668a10ed7f5cd309a4b53d # v3.2.0
+        with:
+          inputs: >-
+            ./exiv2-*/exiv2-*
+
+      - name: List files after
+        run: tree -L 3
+
       - uses: actions/upload-artifact@v6
         with:
           name: exiv2-${{ matrix.runner.arch }}-${{ matrix.runner.os }}
@@ -146,12 +158,6 @@ jobs:
           cmake --preset win-release -S . -B build -DEXIV2_TEAM_PACKAGING=ON -DEXIV2_BUILD_DOC=ON -DEXIV2_ENABLE_WEBREADY=OFF -DEXIV2_ENABLE_CURL=OFF -DEXIV2_BUILD_SAMPLES=OFF
           cmake --build build --parallel -t doc
           cmake --build build --parallel -t package
-
-      - name: Sign with sigstore
-        uses: sigstore/gh-action-sigstore-python@a5caf349bc536fbef3668a10ed7f5cd309a4b53d # v3.2.0
-        with:
-          inputs: >-
-            ./exiv2-*/exiv2-*
 
       - uses: actions/upload-artifact@v6
         with:
