--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,7 @@ jobs:
       - uses: actions/upload-artifact@v6
         with:
           name: exiv2-${{ matrix.runner.arch }}-${{ matrix.runner.os }}
-          path: ./build/exiv2-*.tar.gz
+          path: ./build/exiv2-*.tar.gz*
           if-no-files-found: error
           retention-days: 1
 
@@ -105,10 +105,22 @@ jobs:
           cmake --build build -t doc
           cmake --build build -t package
 
+      - name: List files before
+        run: tree -L 3
+
+      - name: Sign with sigstore
+        uses: sigstore/gh-action-sigstore-python@a5caf349bc536fbef3668a10ed7f5cd309a4b53d # v3.2.0
+        with:
+          inputs: >-
+            ./build/exiv2-*.tar.gz
+
+      - name: List files after
+        run: tree -L 3
+
       - uses: actions/upload-artifact@v6
         with:
           name: exiv2-${{ matrix.runner.arch }}-${{ matrix.runner.os }}
-          path: ./build/exiv2-*.tar.gz
+          path: ./build/exiv2-*.tar.gz*
           if-no-files-found: error
           retention-days: 1
 
@@ -161,10 +173,22 @@ jobs:
           cmake --build build --parallel -t doc
           cmake --build build --parallel -t package
 
+      - name: List files before
+        run: tree -L 3
+
+      - name: Sign with sigstore
+        uses: sigstore/gh-action-sigstore-python@a5caf349bc536fbef3668a10ed7f5cd309a4b53d # v3.2.0
+        with:
+          inputs: >-
+            ./build/exiv2-*.zip
+
+      - name: List files after
+        run: tree -L 3
+
       - uses: actions/upload-artifact@v6
         with:
           name: exiv2-${{ matrix.runner.arch }}-${{ matrix.runner.os }}
-          path: ./build/exiv2-*.zip
+          path: ./build/exiv2-*.zip*
           if-no-files-found: error
           retention-days: 1
 
