--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,6 +82,8 @@ jobs:
         runner:
           - { os: macos-15-intel, arch: x64   }
           - { os: macos-14,       arch: arm64 }
+    permissions:
+      id-token: write  # For sigstore
     steps:
       - uses: actions/checkout@v6
         with:
@@ -131,6 +133,8 @@ jobs:
       matrix:
         runner:
           - { os: windows-2022, arch: x64   }
+    permissions:
+      id-token: write  # For sigstore
     steps:
       - uses: actions/checkout@v6
         with:
