--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -209,5 +209,6 @@ jobs:
       - name: Create GitHub Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPO: ${{ github.repository }}
           RELEASE_NAME: ${{ github.ref_name }}
         run: gh release create $RELEASE_NAME ./exiv2-*/exiv2-* --repo $GITHUB_REPO --generate-notes
