--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,9 @@ jobs:
           - { os: ubuntu-22.04-arm, arch: arm64 }
     permissions:
       id-token: write  # For sigstore
+      attestations: write  # For artifact attestation
+    env:
+      artifact-name: exiv2-${{ matrix.runner.arch }}-${{ matrix.runner.os }}
     steps:
       - uses: actions/checkout@v6
         with:
@@ -57,11 +60,18 @@ jobs:
             ./build/exiv2-*.tar.gz
 
       - uses: actions/upload-artifact@v6
+        id: upload
         with:
-          name: exiv2-${{ matrix.runner.arch }}-${{ matrix.runner.os }}
+          name: ${{ env.artifact-name }}
           path: ./build/exiv2-*.tar.gz*
           if-no-files-found: error
           retention-days: 1
+
+      - name: Attest build provenance
+        uses: actions/attest-build-provenance@96278af6caaf10aea03fd8d33a09a777ca52d62f # v3.2.0
+        with:
+          subject-name: ${{ env.artifact-name }}
+          subject-digest: sha256:${{ steps.upload.outputs.artifact-digest }}
 
   macOS:
     name: 'Build macOS Release'
@@ -73,6 +83,9 @@ jobs:
           - { os: macos-14,       arch: arm64 }
     permissions:
       id-token: write  # For sigstore
+      attestations: write  # For artifact attestation
+    env:
+      artifact-name: exiv2-${{ matrix.runner.arch }}-${{ matrix.runner.os }}
     steps:
       - uses: actions/checkout@v6
         with:
@@ -103,11 +116,18 @@ jobs:
             ./build/exiv2-*.tar.gz
 
       - uses: actions/upload-artifact@v6
+        id: upload
         with:
-          name: exiv2-${{ matrix.runner.arch }}-${{ matrix.runner.os }}
+          name: ${{ env.artifact-name }}
           path: ./build/exiv2-*.tar.gz*
           if-no-files-found: error
           retention-days: 1
+
+      - name: Attest build provenance
+        uses: actions/attest-build-provenance@96278af6caaf10aea03fd8d33a09a777ca52d62f # v3.2.0
+        with:
+          subject-name: ${{ env.artifact-name }}
+          subject-digest: sha256:${{ steps.upload.outputs.artifact-digest }}
 
   Windows:
     name: 'Build Windows Release'
@@ -118,6 +138,9 @@ jobs:
           - { os: windows-2022, arch: x64   }
     permissions:
       id-token: write  # For sigstore
+      attestations: write  # For artifact attestation
+    env:
+      artifact-name: exiv2-${{ matrix.runner.arch }}-${{ matrix.runner.os }}
     steps:
       - uses: actions/checkout@v6
         with:
@@ -167,11 +190,18 @@ jobs:
             ./build/exiv2-*.zip
 
       - uses: actions/upload-artifact@v6
+        id: upload
         with:
-          name: exiv2-${{ matrix.runner.arch }}-${{ matrix.runner.os }}
+          name: ${{ env.artifact-name }}
           path: ./build/exiv2-*.zip*
           if-no-files-found: error
           retention-days: 1
+
+      - name: Attest build provenance
+        uses: actions/attest-build-provenance@96278af6caaf10aea03fd8d33a09a777ca52d62f # v3.2.0
+        with:
+          subject-name: ${{ env.artifact-name }}
+          subject-digest: sha256:${{ steps.upload.outputs.artifact-digest }}
 
   publish:
     needs: [Linux, macOS, Windows]
